--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <i class="fa-regular fa-star text-amber-500"></i>
                             <i class="fa-regular fa-star text-amber-500"></i>
                         </h2>
-                        <h2 class="card-title text-xl font-bold text-center">K. Accessories</h2>
+                        <h2 id="card1-name" class="card-title text-xl font-bold text-center">K. Accessories</h2>
                         <p class="text-center text-xl text-gray-500"><span id="spoon-price">39.00</span> TK</p>
                     </div>
                 </div>   
@@ -57,7 +57,7 @@
                             <i class="fa-regular fa-star text-amber-500"></i>
                             <i class="fa-regular fa-star text-amber-500"></i>
                         </h2>
-                        <h2 class="card-title text-xl font-bold text-center">K. Accessories</h2>
+                        <h2 id="card2-name" class="card-title text-xl font-bold text-center">K. Accessories</h2>
                         <p class="text-center text-xl text-gray-500"><span id="plate-price">25.00</span> TK</p>
                     </div>
                 </div>   
@@ -71,7 +71,7 @@
                             <i class="fa-solid fa-star text-amber-500"></i>
                             <i class="fa-regular fa-star text-amber-500"></i>
                         </h2>
-                        <h2 class="card-title text-xl font-bold text-center">Home Cooker</h2>
+                        <h2 id="card3-name" class="card-title text-xl font-bold text-center">Home Cooker</h2>
                         <p class="text-center text-xl text-gray-500"><span id="cooker-price">49.00</span> TK</p>
                     </div>
                 </div>   
@@ -88,7 +88,7 @@
                             <i class="fa-regular fa-star text-amber-500"></i>
                             <i class="fa-regular fa-star text-amber-500"></i>
                         </h2>
-                        <h2 class="card-title text-xl font-bold text-center">Sports Black Cap</h2>
+                        <h2 id="card4-name" class="card-title text-xl font-bold text-center">Sports Black Cap</h2>
                         <p class="text-center text-xl text-gray-500"><span id="cap-price">49.00</span> TK</p>
                     </div>
                 </div>   
@@ -102,7 +102,7 @@
                             <i class="fa-solid fa-star text-amber-500"></i>
                             <i class="fa-regular fa-star text-amber-500"></i>
                         </h2>
-                        <h2 class="card-title text-xl font-bold text-center">Full Jersey Set</h2>
+                        <h2 id="card5-name" class="card-title text-xl font-bold text-center">Full Jersey Set</h2>
                         <p class="text-center text-xl text-gray-500"><span id="jersey-price">69.00</span> TK</p>
                     </div>
                 </div>   
@@ -116,7 +116,7 @@
                             <i class="fa-regular fa-star text-amber-500"></i>
                             <i class="fa-regular fa-star text-amber-500"></i>
                         </h2>
-                        <h2 class="card-title text-xl font-bold text-center">Sports Shoe</h2>
+                        <h2 id="card6-name" class="card-title text-xl font-bold text-center">Sports Shoe</h2>
                         <p class="text-center text-xl text-gray-500"><span id="shoe-price">159.00</span> TK</p>
                     </div>
                 </div>   
@@ -133,7 +133,7 @@
                             <i class="fa-solid fa-star text-amber-500"></i>
                             <i class="fa-regular fa-star text-amber-500"></i>
                         </h2>
-                        <h2 class="card-title text-xl font-bold text-center">Single Relax Chair</h2>
+                        <h2 id="card7-name" class="card-title text-xl font-bold text-center">Single Relax Chair</h2>
                         <p class="text-center text-xl text-gray-500"><span id="relaxChair-price">185.00</span> TK</p>
                     </div>
                 </div>   
@@ -147,7 +147,7 @@
                             <i class="fa-solid fa-star text-amber-500"></i>
                             <i class="fa-solid fa-star text-amber-500"></i>
                         </h2>
-                        <h2 class="card-title text-xl font-bold text-center">Childern Play</h2>
+                        <h2 id="card8-name" class="card-title text-xl font-bold text-center">Childern Play</h2>
                         <p class="text-center text-xl text-gray-500"><span id="childPlay-price">299.00</span> TK</p>
                     </div>
                 </div>   
@@ -161,7 +161,7 @@
                             <i class="fa-solid fa-star text-amber-500"></i>
                             <i class="fa-solid fa-star text-amber-500"></i>
                         </h2>
-                        <h2 class="card-title text-xl font-bold text-center">Flexible Sofa</h2>
+                        <h2 id="card9-name" class="card-title text-xl font-bold text-center">Flexible Sofa</h2>
                         <p class="text-center text-xl text-gray-500"><span id="sofa-price">339.00</span> TK</p>
                     </div>
                 </div>   
@@ -172,22 +172,26 @@
            <div class="bg-white p-7 rounded-lg mb-6">
                 <h2 id="have-coupon" class="text-2xl font-medium mb-4">Have Coupon?</h2>
                 <div class="flex">
-                    <input class="border border-2 ps-4 text-xl font-medium rounded-lg w-60" type="text" name="" id="" placeholder="Coupon Code">
-                    <button id="btn-coupon" class="text-white text-xl px-6 py-3 rounded-lg font-medium">Apply</button>
+                    <input class="border border-2 ps-4 text-xl font-medium rounded-lg w-60" type="text" name="" id="coupon-field" placeholder="Coupon Code">
+                    <button disabled id="btn-coupon" class="text-xl px-6 py-3 rounded-lg font-medium">Apply</button>
                 </div>
            </div>
            <div class="bg-white p-7 rounded-lg mb-6">
-                <h2 id="have-coupon" class="text-2xl text-center font-medium underline underline-offset-4">Product List</h2>
-                <br> <br>
+                <h2 id="have-coupon" class="text-2xl text-center font-medium underline underline-offset-8">Shopping Cart</h2>
+                <div id="purchase-list">
+
+                </div> <br>
                 <hr>
                 <h2 id="have-coupon" class="text-2xl font-medium mt-4">Total price: <span class="text-gray-500"><span id="total-price">00.00</span> TK</span></h2>
-                <h2 id="have-coupon" class="text-2xl font-medium mt-4">Discount: <span class="text-gray-500">51.40 TK</span></h2>
-                <h2 id="have-coupon" class="text-2xl font-medium my-5">Total: <span class="text-gray-500">205.60 TK</span></h2>
+                <h2 class="text-2xl font-medium mt-4">Discount: <span class="text-gray-500"><span id="discount">51.40</span> TK</span></h2>
+                <h2 class="text-2xl font-medium my-5">Total: <span class="text-gray-500"><span id="final-total">205.60</span> TK</span></h2>
                 <hr>
-                <button id="btn-purchase" class="text-white text-xl mt-5 mx-8 px-16 py-3 rounded-lg font-medium">Make Purchase</button>
+                <button id="btn-purchase" class="text-white text-xl mt-5 mx-8 px-16 py-3 rounded-lg font-medium" onclick="buttonPurchase()">Make Purchase</button>
            </div>
         </section>
     </main>
-    <script src="script.js"></script>
+    <script src="JS/utilities.js"></script>
+    <script src="JS/script.js"></script>
+    <script src="JS/script2.js"></script>
 </body>
 </html>
